feat: expand ItemsData model and add rift motes to price tooltips
- Fixed a bug in `ItemsData#getByName()` where it was incorrectly querying the `byId` map.